@@ -899,7 +899,7 @@ class Query(object):
         # after the method completes,
         # the query's joinpoint will be set to this.
         right_entity = None
-
+        
         for arg1 in util.to_list(keys):
             aliased_entity = False
             alias_criterion = False
@@ -969,6 +969,10 @@ class Query(object):
                         clause = ent.selectable
                         break
 
+            # TODO:
+            # this provides one kind of "backwards join"
+            # tested in test/orm/query.py.
+            # remove this in 0.6
             if not clause:
                 if isinstance(onclause, interfaces.PropComparator):
                     clause = onclause.__clause_element__()
@@ -2057,11 +2061,8 @@ class _ColumnEntity(_QueryEntity):
         if _is_aliased_class(entity):
             return entity is self.entity_zero
         else:
-            # TODO: this will fail with inheritance, entity_zero
-            # is not a base mapper.  MapperEntity has path_entity
-            # which serves this purpose (when saying: query(FooBar.somecol).join(SomeClass, FooBar.id==SomeClass.foo_id))
-            return entity.base_mapper is self.entity_zero
-
+            return not _is_aliased_class(self.entity_zero) and entity.base_mapper.common_parent(self.entity_zero)
+            
     def _resolve_expr_against_query_aliases(self, query, expr, context):
         return query._adapt_clause(expr, False, True)
 
